# my-flake-templates

./: README.md  flake.nix
python313/: pyproject.toml
templates/ci-runner/: flake.nix
templates/forge-dev/: .gitignore  README.md  build.gradle  flake.nix  mod-config.nix  settings.gradle
templates/llm_dev_312/: flake.nix  pyproject.toml
templates/pyspark-dev/: flake.nix
templates/python/: README.md  flake.nix
templates/python-multi/: flake.nix  pyproject.toml
templates/python312/: flake.nix
templates/python313/: flake.nix  pyproject.toml
templates/python314/: flake.nix  pyproject.toml
templates/vm-deploy/: flake.nix
templates/vm-deploy/.github/workflows/: deploy-aws.yml  deploy-gcp.yml
templates/vm-deploy/nixos/: configuration.nix
templates/vm-deploy/scripts/: create_aws_role.sh  create_service_account.sh
templates/vm-deploy/terraform/deployments/aws/: main.tf  terraform.tfvars.example  variables.tf
templates/vm-deploy/terraform/deployments/gcp/: main.tf  terraform.tfvars.example  variables.tf
templates/vm-deploy/terraform/modules/aws/: compute.tf  main.tf  outputs.tf  storage.tf  variables.tf
templates/vm-deploy/terraform/modules/gcp/: compute.tf  main.tf  outputs.tf  storage.tf  variables.tf
